docs: add documentacao para delete
